Remove wrap to see if that fixes the screen sizes

--- a/css/main.css
+++ b/css/main.css
@@ -31,11 +31,3 @@ h2 {
   color: #fff;
   text-shadow: .1em .1em .3em rgba(0, 0, 0, .6);
 }
-
-.wrap {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0;
-  position: relative;
-  width: 320px;
-}
